--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.4.1",
-    "tailwindcss": "^4.1.2"
+    "tailwindcss": "^4.1.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
