--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nanoid": "^5.1.5",
     "nodemon": "^3.1.10"
   }
 }
