--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,9 @@
     "morgan": "^1.10.0",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.2",
+    "@types/morgan": "^1.9.9"
   }
 }
