--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10"
